# bxt

./: .clang-format  .clang-tidy  .clangd  .devcontainer.json  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  commitlint.config.ts  conanfile.py  conanfile.txt  docker-compose.caddy.yml  docker-compose.yml
daemon/: CMakeLists.txt  README.md  application.cpp  box.yml  di.h  events.h
daemon/core/application/: RequestContext.h
daemon/core/application/dtos/: PackageDTO.h  PackageLogEntryDTO.h  PackageSectionDTO.h  PackageUpdatedLogEntryDTO.h  UserDTO.h
daemon/core/application/errors/: AuthError.h  CompareError.h  CrudError.h
daemon/core/application/events/: CommitEvent.h  DeployEvent.h  IntegrationEventBase.h  SyncEvent.h
daemon/core/application/notifications/: Notification.h  NotificationDispatcherBase.h
daemon/core/application/services/: AuthService.cpp  AuthService.di.h  AuthService.h  CompareService.cpp  CompareService.h  DeploymentService.di.h  DeploymentService.h  PackageLogEntryService.cpp  PackageLogEntryService.h  PackageService.cpp  PackageService.di.h  PackageService.h  PermissionService.cpp  PermissionService.h  SectionService.cpp  SectionService.h  SyncService.cpp  SyncService.di.h  SyncService.h  UserService.cpp  UserService.di.h  UserService.h
daemon/core/domain/entities/: AggregateRoot.h  Architecture.h  Branch.h  Package.cpp  Package.h  PackageBase.cpp  PackageBase.h  PackageLogEntry.h  PackageUpdateLogEntry.h  Permission.h  Repo.h  Section.h  User.h
daemon/core/domain/enums/: ArchitectureMatch.h  LogEntryType.h  PoolLocation.cpp  PoolLocation.h
daemon/core/domain/events/: Event.cpp  Event.h  EventBase.h  PackageEvents.h  UserEvents.h
daemon/core/domain/helpers/: RepositoryBase.h
daemon/core/domain/repositories/: PackageRepositoryBase.di.h  PackageRepositoryBase.h  ReadOnlyRepositoryBase.h  RepositoryBase.h  SectionReadOnlyRepository.di.h  UnitOfWorkBase.h  UserRepository.di.h  UserRepository.h
daemon/core/domain/services/: PackageService.cpp  PackageService.h  PermissionMatcher.cpp  PermissionMatcher.h
daemon/core/domain/value_objects/: Name.cpp  Name.h  PackageArchitecture.cpp  PackageArchitecture.h  PackagePoolEntry.cpp  PackagePoolEntry.h  PackageVersion.cpp  PackageVersion.h  Permission.h
daemon/event_log/application/dtos/: CommitLogEntryDTO.h  DeployLogEntryDTO.h  EventLogEntryDTO.h  PackageLogEntryDTO.h  PackageUpdateLogEntryDTO.h  SyncLogEntryDTO.h
daemon/event_log/application/services/: LogService.cpp  LogService.h
daemon/event_log/domain/entities/: CommitLogEntry.h  DeployLogEntry.h  EventLogEntry.h  (+3 more)
daemon/infrastructure/: DeploymentService.cpp  DeploymentService.di.h  DeploymentService.h  DeploymentServiceOptions.cpp  DeploymentServiceOptions.h  DispatchingUnitOfWork.h  EventBusDispatcher.cpp  EventBusDispatcher.h  EventLogger.h  PackageFile.h  PackageService.cpp  PackageService.h  PackageServiceOptions.cpp  PackageServiceOptions.h
daemon/infrastructure/alpm/: ArchRepoOptions.h  ArchRepoSource.h  ArchRepoSyncService.cpp  ArchRepoSyncService.di.h  ArchRepoSyncService.h
daemon/infrastructure/email/: EmailNotificationDispatcher.cpp  EmailNotificationDispatcher.h  EmailOptions.h
daemon/infrastructure/ws/: HandlerBase.h  SyncProtocolHandler.h  WSController.cpp  WSController.h
daemon/persistence/alpm/: Box.cpp  Box.di.h  Box.h  BoxOptions.h
daemon/persistence/box/: BoxOptions.h  BoxRepository.cpp  BoxRepository.h
daemon/persistence/config/: SectionRepository.cpp  SectionRepository.di.h  SectionRepository.h
daemon/persistence/lmdb/: LmdbRepository.h  LmdbUnitOfWork.h  LogEntryRepositories.h  PackageLogEntryRepository.h  UserRepository.cpp  UserRepository.di.h  UserRepository.h
daemon/presentation/: JwtOptions.h  Names.h  Token.cpp  Token.h
daemon/presentation/cli-controllers/: DeploymentController.cpp  DeploymentController.h  DeploymentOptions.h
daemon/presentation/messages/: AuthMessages.h  CompareMessages.h  LogMessages.h  PackageMessages.h  SectionMessages.h  UserMessages.h
daemon/presentation/web-controllers/: AuthController.cpp  AuthController.h  CompareController.cpp  CompareController.h  LogController.cpp  LogController.h  PackageController.cpp  PackageController.h  PermissionController.cpp  PermissionController.h  SectionController.cpp  SectionController.h  UserController.cpp  UserController.h
daemon/presentation/web-filters/: JwtFilter.cpp  JwtFilter.h
daemon/swagger/: CMakeLists.txt  configure_files.cmake  index.html.in  openapi.yml.in  swagger-initializer.js.in
daemon/tests/: CMakeLists.txt
daemon/tests/data/: dummy-1-1-any.pkg.tar.zst  dummy-1-1-any.pkg.tar.zst.sig
daemon/ui/web-controllers/: AuthController.cpp  AuthController.h  PackageController.cpp  PackageController.h  PermissionController.cpp  PermissionController.h  UserController.cpp  UserController.h
daemon/ui/web-filters/: JwtFilter.cpp  JwtFilter.h
daemon/utilities/: CerealFsPath.h  Error.h  FixedString.h  Mapper.h  MemoryLiterals.h  NavigationAction.h  StaticDTOMapper.h  base64.h  hash_from_file.h  locked.h  to_string.h
daemon/utilities/alpmdb/: Database.cpp  Database.h  Desc.cpp  Desc.h  DescFormatter.cpp  DescFormatter.h  PkgInfo.cpp  PkgInfo.h
daemon/utilities/box/: AlpmDbArchiver.cpp  AlpmDbArchiver.h  Database.cpp  Database.h  Package.h  PoolManager.cpp  PoolManager.h
daemon/utilities/configuration/: Configuration.h
daemon/utilities/drogon/: Helpers.h  Macro.h  Macros.h
daemon/utilities/errors/: DatabaseError.h  FsError.h  Macro.h
daemon/utilities/eventbus/: EventBusDispatcher.h
daemon/utilities/libarchive/: Error.h  Exception.h  Header.h  Reader.cpp  Reader.h  Writer.cpp  Writer.h
daemon/utilities/lmdb/: BoostSerializer.h  CerealSerializer.h  Database.h  Environment.h  Error.h  LMDBOptions.h
daemon/utilities/log/: Logging.h
daemon/utilities/reflect/: PathParser.h  TimePointParser.h
daemon/utilities/repo-schema/: Parser.cpp  Parser.h  SchemaExtension.h
db-cli/: CMakeLists.txt  cli.cpp  validation.h
dbcli/: CMakeLists.txt  dbcli.cpp
(+172 files in other folders)
